--- a/src/assets/styles/AdminDashboard.css
+++ b/src/assets/styles/AdminDashboard.css
@@ -10,8 +10,9 @@
   color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch; /* Cambiado de center a stretch */
   padding: 2rem 1rem;
+  height: 100vh; /* Asegura que ocupe toda la altura */
 }
 
 .admin-logo {
@@ -237,8 +238,10 @@
   background-color: #1d4ed8;
 }
 
-
 .admin-back-home {
+  display: block !important;
+  margin-top: auto;
+  width: 100%;
   background-color: #ef4444;
   color: white;
   border: none;
@@ -246,7 +249,6 @@
   border-radius: 0.5rem;
   font-weight: 600;
   cursor: pointer;
-  margin-top: auto;
   margin-bottom: 1rem;
   transition: background-color 0.2s;
 }
